--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Insove</title>
+   <title>ekoses24</title>
    <!-- css -->
    <link rel="stylesheet" href="dist/output.css">
    <!-- icons -->
@@ -27,7 +27,7 @@
          <!-- logo -->
          <div class="flex justify-center lg:justify-normal">
             <a href="#">
-               <img src="assets/img/header/logo.svg" alt="">
+               <img src="assets/img/header/logo.png" alt="">
             </a>
          </div>
 
@@ -35,17 +35,22 @@
             <!-- location -->
             <div class="flex justify-center items-center gap-x-2 lg:justify-normal">
                <i class="ri-map-pin-2-fill text-2xl text-accent"></i>
-               <div class="text-secondary">198266 SPb Stoykosty</div>
+               <div class="text-secondary">Санкт-Петербург, 17-линия, дом 4-6, БЦ "СИТИЛИНК"</div>
             </div>
             <!-- phone -->
             <div class="flex justify-center items-center gap-x-2 lg:justify-normal">
                <i class="ri-phone-fill text-2xl text-accent"></i>
-               <div class="text-secondary">(+7) 911 926-81-88</div>
+               <div class="text-secondary"><a href="tel:88005504062">8 800 550 40 62</a></div>
+            </div>
+            <!-- phone -->
+            <div class="flex justify-center items-center gap-x-2 lg:justify-normal">
+               <i class="ri-phone-fill text-2xl text-accent"></i>
+               <div class="text-secondary"><a href="tel:+79091382721">+7 909 138 27 21</a></div>
             </div>
             <!-- btn-->
             <button class="btn btn-sm btn-outline
             w-[240px] lg:w-auto mx-auto lg:mx-0">
-               Book now
+               Связаться
             </button>
             <!-- mobile nav -->
             <nav class="mnav bg-white fixed w-[300px] top-0 h-screen
@@ -150,18 +155,19 @@
                   text-[#9ab4b7] tracking-[2.24px]">Live your life</div>
                </div>
                <!-- title -->
-               <h1 class="h1 mb-6">We care about your health</h1>
+               <h1 class="h1 mb-6">Санэпидем услуги для бизнеса и частных лиц с выездом
+                  через 2 часа в СПб и ЛО!</h1>
                <!-- desc -->
-               <p class="mb-[42px] md:max-w-xl">Lorem ipsum consectetur adipisicing elit. Quaerat dolorum
-                  impedit tenetur, minus alias eum molestias molestiae est
-                  consequatur. Soluta, pariatur mollitia.
+               <p class="mb-[42px] md:max-w-xl">
+                  Обработка любой сложности.
+                  Подготовка документации для органов Роспотребнадзора и Росприроднадзора.
                </p>
                <!-- btn-->
-               <button class="btn btn-lg btn-accent mx-auto xl:mx-0">Contact us</button>
+               <button class="btn btn-lg btn-accent mx-auto xl:mx-0">Связаться</button>
             </div>
             <!-- image -->
             <div class="hero__img hidden xl:flex max-w-[814px] self-end">
-               <img src="assets/img/hero/img.png" alt="">
+               <img src="assets/img/hero/img_ekoses24.png" alt="">
             </div>
          </div>
       </div>
@@ -214,7 +220,7 @@
             xl:flex-row xl:mb-[60px]">
                <h2 class="h2 text-white flex-1 mb-4 xl:mb-0 text-center
                xl:text-left">
-                  Our best services for your solution
+                  Наши услуги
                </h2>
                <p class="text-white flex-1 text-center xl:text-left
                max-w-2xl xl:max-w-none">
@@ -238,10 +244,14 @@
                   <img src="assets/icons/services/icon-1.svg" alt="">
                </div>
                <!-- grid item title-->
-               <h3 class="h3 mb-[10px]">General Practitioners</h3>
+               <h3 class="h3 mb-[10px]">Дезинфекция</h3>
                <!-- grid item description -->
                <p class="font-light leading-normal max-w-[300px]">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, culpa!</p>
+                  Уничтожение возбудителей инфекционных заболеваний и
+                  разрушение токсинов
+               </p>
+               <!-- btn-->
+               <button class="btn btn-sm btn-accent mx-auto xl:mx-0">Связаться</button>
             </div>
             <!-- grid item -->
             <div class="services__item bg-white p-[30px]
@@ -252,10 +262,14 @@
                   <img src="assets/icons/services/icon-2.svg" alt="">
                </div>
                <!-- grid item title-->
-               <h3 class="h3 mb-[10px]">Pregnancy Support</h3>
+               <h3 class="h3 mb-[10px]">Дезинсекция</h3>
                <!-- grid item description -->
                <p class="font-light leading-normal max-w-[300px]">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, culpa!</p>
+                  Уничтожение насекомых, чьё соседство с человеком
+                  считается нежелательным
+               </p>
+               <!-- btn-->
+               <button class="btn btn-sm btn-accent mx-auto xl:mx-0">Связаться</button>
             </div>
             <!-- grid item -->
             <div class="services__item bg-white p-[30px]
@@ -266,10 +280,14 @@
                   <img src="assets/icons/services/icon-3.svg" alt="">
                </div>
                <!-- grid item title-->
-               <h3 class="h3 mb-[10px]">Nutritional Support</h3>
+               <h3 class="h3 mb-[10px]">Дератизация</h3>
                <!-- grid item description -->
                <p class="font-light leading-normal max-w-[300px]">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, culpa!</p>
+                  Комплексные меры по уничтожению грызунов
+                  (крыс, мышей и др.)
+               </p>
+               <!-- btn-->
+               <button class="btn btn-sm btn-accent mx-auto xl:mx-0">Связаться</button>
             </div>
             <!-- grid item -->
             <div class="services__item bg-white p-[30px]
@@ -280,10 +298,13 @@
                   <img src="assets/icons/services/icon-4.svg" alt="">
                </div>
                <!-- grid item title-->
-               <h3 class="h3 mb-[10px]">Pharmaceutical Care</h3>
+               <h3 class="h3 mb-[10px]">Дезодорация</h3>
                <!-- grid item description -->
                <p class="font-light leading-normal max-w-[300px]">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, culpa!</p>
+                  Маскировка, ослабление или устранение неприятных запахов
+               </p>
+               <!-- btn-->
+               <button class="btn btn-sm btn-accent mx-auto xl:mx-0">Связаться</button>
             </div>
          </div>
       </div>
@@ -294,54 +315,20 @@
    <section class="appointment section">
       <div class="container mx-auto">
          <h2 class="appointment__title h2 mb-5 xl:mb-[50px] text-center
-         xl:text-left">Book Appointment or call: <span class="text-accent-tertiary">+7 911 926-8188</span></h2>
+         xl:text-left">Закажите звонок или позвоните сами:
+            <a class="text-accent-tertiary" href="tel:+79091382721">+7 909 138 27 21</a>
+            \
+            <a class="text-accent-tertiary" href="tel:88005504062">8 800 550 40 62</a>
+         </h2>
          <!-- form -->
          <form class="appointment__form flex flex-col gap-y-5">
-            <!-- select wrapper -->
-            <div class="flex flex-col xl:flex-row gap-5">
-               <!-- select 1 -->
-               <div class="select relative flex items-center">
-                  <!-- icon -->
-                  <div class="absolute right-4">
-                     <i class="ri-arrow-down-s-line text-[26px] text-primary"></i>
-                  </div>
-                  <!-- select -->
-                  <select class="appearance-none outline-none h-full w-full
-                  bg-transparent px-4">
-                     <option value="1">Select department</option>
-                     <option value="2">Department 1</option>
-                     <option value="3">Department 2</option>
-                     <option value="4">Department 3</option>
-                  </select>
-               </div>
-               <!-- select 2 -->
-               <div class="select relative flex items-center">
-                  <!-- icon -->
-                  <div class="absolute right-4">
-                     <i class="ri-arrow-down-s-line text-[26px] text-primary"></i>
-                  </div>
-                  <!-- select -->
-                  <select class="appearance-none outline-none h-full w-full
-                                                bg-transparent px-4">
-                     <option value="1">Select doctor</option>
-                     <option value="2">Dr. Jane Doe</option>
-                     <option value="3">Dr. Jhon Doe</option>
-                     <option value="4">Dr. Bob Smith</option>
-                  </select>
-               </div>
-            </div>
             <!-- input wrapper -->
             <div class="flex flex-col xl:flex-row gap-5">
-               <input type="text" class="input" placeholder="Full Name">
-               <input type="phone" class="input" placeholder="Phone Number">
-            </div>
-            <!-- input wrapper -->
-            <div class="flex flex-col xl:flex-row gap-5">
-               <input type="date" class="input">
-               <input type="time" class="input">
+               <input type="text" class="input" placeholder="Ваше имя">
+               <input type="phone" class="input" placeholder="Номер телефона">
             </div>
             <!-- btn -->
-            <button class="btn btn-lg btn-accent self-start" type="submit">Book an appointment</button>
+            <button class="btn btn-lg btn-accent self-start" type="submit">Заказать</button>
          </form>
       </div>
    </section>
@@ -632,7 +619,7 @@
    <!-- faq -->
    <section class="faq">
       <div class="container mx-auto">
-         <h2 class="faq__title h2 text-center mb-[50px]">We've got answers</h2>
+         <h2 class="faq__title h2 text-center mb-[50px]">У нас есть ответы</h2>
          <!-- item wrapper -->
          <div class="max-w-5xl mx-auto">
             <!-- item -->
